# multi-camera-person-tracking

./: .clang-format  .env.example  .gitignore  CMakeLists.txt  README.md  docker-compose.yml
cmake/: FindDeepStream.cmake  FindTensorRT.cmake
configs/: cameras.yaml  pgie_yolov8_person.txt  system_config.yaml  tracker_nvdcf.yml
docker/: Dockerfile  entrypoint.sh
docs/: architecture.md  crosscam_matching.md  tracker_comparison.md
include/mc_tracking/config/: system_config.hpp
include/mc_tracking/crosscam/: hungarian.hpp  identity_matcher.hpp
include/mc_tracking/overlay/: visualizer.hpp
include/mc_tracking/pipeline/: frame_meta.hpp  multi_camera.hpp  single_camera.hpp
include/mc_tracking/reid/: osnet_extractor.hpp  reid_gallery.hpp
include/mc_tracking/tracker/: bytetrack.hpp  iou_tracker.hpp  kalman_filter.hpp  nvdcf_tracker.hpp  track.hpp  tracker_iface.hpp
include/mc_tracking/trt/: trt_engine.hpp  yolov8_detector.hpp
include/mc_tracking/utils/: cuda_helpers.hpp  logger.hpp
scripts/: build_engines.sh  download_models.sh  infer_video.sh
src/: main.cpp
src/config/: system_config.cpp
src/crosscam/: hungarian.cpp  identity_matcher.cpp
src/overlay/: visualizer.cpp
src/pipeline/: multi_camera.cpp  single_camera.cpp
src/reid/: osnet_extractor.cpp  reid_gallery.cpp
src/tracker/: bytetrack.cpp  iou_tracker.cpp  kalman_filter.cpp  nvdcf_tracker.cpp  tracker_factory.cpp
src/trt/: trt_engine.cpp  yolov8_detector.cpp
src/utils/: logger.cpp
tools/: benchmark.cpp
